--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/stockmanagment?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.generate-ddl=true
-	
+server.port=8081
 spring.jpa.show-sql=true
 
 # App Properties
